--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -44,11 +44,13 @@
     font-size: 1.8rem;
     text-align: center;
     color: rgb(151, 0, 3);
+    width: 90%;
+    margin: auto;
 }
 
 .three-three {
     width: 100%;
-    padding: 2rem 0rem;
+    padding: 1rem 0rem;
 }
 
 .three-three-one {
@@ -58,7 +60,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    padding: 1rem 0rem;
+    /* padding: 1rem 0rem; */
 }
 
 
@@ -75,7 +77,7 @@
 .count-cm h2{
     text-align: center;
     padding: .5rem 0rem;
-    color: gray;
+    color: rgb(39, 38, 38);
 }
 
 
@@ -183,7 +185,6 @@
 }
 .five-in-one-card {
   width: 19%;
-  border-bottom: 1px solid rgb(155, 0, 3);
   padding-bottom: 0.5rem;
 }
 .five-in-one-card-in {
