--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -147,6 +147,142 @@
 }
 
 
+
+
+
+/* four */
+
+.four {
+  width: 100%;
+}
+.four img {
+  width: 100%;
+}
+
+
+
+.seven {
+  width: 100%;
+  padding: 3rem 0rem;
+}
+.seven-in {
+  width: 90%;
+  margin: auto;
+}
+
+.seven-in-one {
+  width: 100%;
+  padding: 1rem 0rem;
+}
+.seven-in-one-one {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 1rem;
+}
+/* Resetting margin and padding */
+.seven-in-one-one .seven-in-one-one-box:first-child {
+  width: 50%;
+  position: relative;
+  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.seven-in-one-one .seven-in-one-one-box:first-child:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10rem; /* Adjust height as needed */
+  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+
+.seven-in-one-one-box-in {
+  width: 100%;
+  height: 100%;
+}
+.seven-in-one-one .seven-in-one-one-box:first-child .seven-in-one-one-box-in img {
+  width: 100%;
+}
+
+.seven-in-one-one-box-in-desc {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 1rem;
+  text-align: center;
+  color: white;
+  text-align: left;
+}
+/* width 25% for nth child 2 and 3 */
+.seven-in-one-one .seven-in-one-one-box:nth-child(2), .seven-in-one-one .seven-in-one-one-box:nth-child(3) {
+  width: 25%;
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in {
+  width: 100%;
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-one {
+  width: 100%;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-one img {
+  width: 100%;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two {
+  padding: 0.5rem 1rem;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two h4{
+  color: rgb(151, 0, 3);
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two p {
+  font-size: 1rem;
+}
+
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) {
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in {
+  width: 100%;
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-one {
+  width: 100%;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-one img {
+  width: 100%;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two {
+  padding: 0.5rem 1rem;
+}
+
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two h4{
+  color: rgb(151, 0, 3);
+}
+.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two p {
+  font-size: 1rem;
+}
+
+.seven-in-one .seven-in-one-one:nth-child(2) {
+  width: 100%;
+  padding: 1rem 0rem;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+
+
+
 /* Eight starts here */
 
 .eight {
