--- a/my-app/src/app/Components/Navbar/Navbar.css
+++ b/my-app/src/app/Components/Navbar/Navbar.css
@@ -49,6 +49,10 @@
     color: white;
 }
 
+.Navbar-one h1:hover {
+    cursor: pointer;
+}
+
 .Navbar-two {
     width: 70%;
 }
@@ -66,6 +70,10 @@
 .Navbar-two li {
     font-size: 1.1rem;
     color: white;
+}
+
+.Navbar-two li:hover {
+    cursor: pointer;
 }
 
 .Navbar-two a {
