--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -177,9 +177,9 @@
 .seven-in-one-one {
   display: flex;
   justify-content: space-between;
-  column-gap: 1rem;
+  column-gap: 0rem;
 }
-/* Resetting margin and padding */
+
 .seven-in-one-one .seven-in-one-one-box:first-child {
   width: 50%;
   position: relative;
@@ -192,7 +192,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 10rem; /* Adjust height as needed */
+  height: 10rem;  
   background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
@@ -213,9 +213,10 @@
   color: white;
   text-align: left;
 }
-/* width 25% for nth child 2 and 3 */
+
+
 .seven-in-one-one .seven-in-one-one-box:nth-child(2), .seven-in-one-one .seven-in-one-one-box:nth-child(3) {
-  width: 25%;
+  width: 24%;
 }
 .seven-in-one-one .seven-in-one-one-box:nth-child(2) {
   display: flex;
