--- a/my-app/src/app/Components/Navbar/Navbar.css
+++ b/my-app/src/app/Components/Navbar/Navbar.css
@@ -58,7 +58,7 @@
 }
 
 .Navbar-two ul {
-    width: 60%;
+    width: 75%;
     margin: auto;
     list-style: none;
     height: 100%;
@@ -80,3 +80,34 @@
     color: white;
     text-decoration: none;
 }
+
+
+.clubs-dropdown {
+    display: none; /* Initially hide the dropdown */
+    position: absolute;
+    left: 0rem;
+    min-width: 90%;
+    top: 5rem;
+    margin-left: 5%;
+    height: 80vh;
+
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    background-color: white;
+    color: black;
+    border: 2px solid rgb(151, 0, 3);
+  }
+  
+  .clubs-hover:hover .clubs-dropdown {
+    display: block; /* Show the dropdown when .clubs-hover is hovered */
+  }
+  
+  .clubs-dropdown .thirteen-in {
+    padding: 1rem 0rem;
+
+  }
+
+  .clubs-dropdown .thirteen-box-in-one-in-link {
+    color: black;
+    font-size: 0.9rem;
+    margin-bottom: 0rem !important;
+  }
