--- a/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
+++ b/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
@@ -19,26 +19,42 @@
     z-index: 1000;
 }
 
-.ClubPage {
+.clubpage-hero {
     width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-.ClubPage-in {
-    width: 100%;
-}
-
-.Club-one {
+.clubpage-hero-in {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+}
+.clubpage-hero-in img {
+    width: 100%;
+}
+.clubpage-hero-one {
+    position: absolute;
+    width: 100%;
+    border: 2px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.clubpage-hero-one h1 {
+    font-size: 4rem;
+    width: 70%;
+    font-weight: 800;
+    color: white;
+    
+    border: 2px solid green;
 }
 
-.Club-one-one {
-    width: 100%;
-    height: 80vh;
-}
-
-.Club-one-one img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.clubpage-hero-one h3 {
+    font-size: 1.5rem;
+    width: 90%;
+    font-weight: 500;
+    color: white;
+    text-align: center;
 }
