--- a/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
+++ b/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
@@ -27,18 +27,193 @@
     width: 100%;
 }
 
+
 .Club-one {
-    width: 100%;
-    height: 100vh;
+    height: 40vh;
 }
 
-.Club-one-one {
+
+.Club-two {
     width: 100%;
-    height: 80vh;
 }
 
-.Club-one-one img {
+.Club-two-one {
+    width: 90%;
+    margin: auto;
+    padding: 2rem 0rem;
+}
+
+.Club-two-one-one {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Club-two-one-one p {
+    font-size: 1.5rem;
+    background-clip: text;
+    -webkit-background-clip: text;  
+    color: transparent;
+    background-image: linear-gradient(to right, black, rgb(151, 0, 3));
+}
+
+.Club-two-one-two {
+    width: 60%;
+    margin: auto;
+}
+
+.Club-two-one-two h1 {
+    text-align: center;
+    font-size: 3.4rem;
+}
+
+.Club-two-one-three {
+    width: 60%;
+    margin: auto;
+}
+
+.Club-two-one-three p {
+    text-align: center;
+    font-size: 1rem;
+}
+
+
+
+.Club-three {
+    width: 100%;
+}
+
+.Club-three-one {
+    width: 90%;
+    margin: auto;
+    padding: 4rem 0rem;
+}
+
+.Club-three-options {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.c-op-cm {
+    width: 18%;
+}
+
+.c-op-cm-in {
+    width: 100%;
+    display: flex;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4rem;
+    padding: .8rem 0rem;
+    gap: 1rem;
+}
+
+
+.c-op-cm-in p {
+    font-size: 1.2rem;
+}
+
+.icon-op {
+    font-size: 1.5rem;
+}
+
+.c-op-cm-in:hover {
+    background-color: rgb(151, 0, 3);
+    color: white;
+}
+
+
+#hide-club {
+    display: none;
+}
+
+.Club-four {
+    width: 100%;
+}
+
+.Club-four-in {
+    width: 90%;
+    margin: auto;
+    padding: 2rem 0rem;
+    border: 2px solid blue;
+    height: 50vh;
+}
+
+
+.Club-five {
+    width: 100%;
+}
+
+.Club-five-in {
+    width: 90%;
+    margin: auto;
+    padding: 4rem 0rem;
+    height: 50vh;
+}
+
+.Club-five-one {
+    width: 100%;
+}
+
+.Club-five-one p {
+    font-size: 1.5rem;
+    text-align: center;
+    background-clip: text;
+    -webkit-background-clip: text;  
+    color: transparent;
+    background-image: linear-gradient(to right, black, rgb(151, 0, 3));
+}
+
+.Club-five-one h1 {
+    text-align: center;
+    font-size: 3.4rem;
+}
+
+.Club-five-two {
+    width: 100%;
+}
+
+.Club-five-two-in {
+    width: 90%;
+    margin: auto;
+    padding: 2rem 0rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.cm-club-stats {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cm-club-stats h1 {
+    font-size: 4.5rem;
+    background-clip: text;
+    -webkit-background-clip: text;  
+    color: transparent;
+    background-image: linear-gradient(to right, black, rgb(151, 0, 3));
+}
+
+.cm-club-stats p {
+    font-size: 1.2rem;
+    color: rgb(64, 63, 63);
+}
+
+.ClubPage-six {
+    width: 100%;
+    height: 10vh;
+    border-top-left-radius: 80%;
+    border-top-right-radius: 10%; 
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
