--- a/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
+++ b/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
@@ -19,59 +19,90 @@
     z-index: 1000;
 }
 
-.clubpage-hero {
+
+.club-hero {
     width: 100%;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.clubpage-hero-in {
-    width: 100%;
-    height: 100vh;
     overflow: hidden;
+    border-bottom-left-radius: 100% 30%;
+    border-bottom-right-radius: 100% 30%;
 }
-.clubpage-hero-in img {
+
+.club-hero-in {
     width: 100%;
-}
-.clubpage-hero-one {
-    position: absolute;
-    width: 100%;
-    border: 2px solid red;
+    position: relative;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.clubpage-hero-one h1 {
-    font-size: 4rem;
-    width: 70%;
-    font-weight: 800;
-    color: white;
-    
-    border: 2px solid green;
+    background-color: rgb(151, 0, 3);
+    position: relative;
+
 }
 
-.clubpage-hero-one h3 {
-    font-size: 1.5rem;
-    width: 90%;
-    font-weight: 500;
-    color: white;
-    text-align: center;
+.club-hero-in::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(151, 0, 3, 0.4));
 }
 
-.ClubPage-in {
+.club-hero-in img {
     width: 100%;
 }
 
-
-.Club-one {
-    height: 40vh;
+.club-hero-in-description {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
 }
+
+.club-hero-in-description h1 {
+    font-size: 5rem;
+    color: white;
+    font-weight: 700;
+    width: 60%;
+    text-align: center;
+    line-height: 6rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 1rem;
+}
+
+.club-hero-in-description h3 {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 2rem;
+}
+
+.club-hero-in-description a {
+    padding: 0.7rem 1.5rem;
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(to right, black, rgb(151, 0, 3));
+    border: 2px solid white;
+    border-radius: 2rem;
+    font-size: 1rem;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+
+
+
+
+
 
 
 .Club-two {
     width: 100%;
+    padding: 3rem 0rem;
 }
 
 .Club-two-one {
