--- a/my-app/src/app/(pages)/auth/login/page.css
+++ b/my-app/src/app/(pages)/auth/login/page.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 
-.EventsComponent {
+.LoginComponent {
     width: 100%;
 }
 
-.EventsComponent-in {
+.LoginComponent-in {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -17,17 +17,17 @@
     justify-content: center;
 }
 
-.Events-one {
+.Login-one {
     width: 50%;
     text-align: center;
     padding: 2rem;
 }
 
-.Events-two {
+.Login-two {
     width: 50%;
 }
 
-.Events-two-in {
+.Login-two-in {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -36,12 +36,12 @@
     gap: 1rem;
 }
 
-.Events-in-one {
+.Login-in-one {
     width: 50%;
     margin: auto;
 }
 
-.Events-in-one input {
+.Login-in-one input {
     width: 100%;
     padding: .8rem;
     border: .1px solid gray;
@@ -49,12 +49,12 @@
     font-size: 1rem;
 }
 
-.Events-in-two {
+.Login-in-two {
     width: 50%;
     margin: auto;
 }
 
-.Events-in-two input {
+.Login-in-two input {
     width: 100%;
     padding: .8rem;
     border: .1px solid gray;
@@ -62,39 +62,12 @@
     font-size: 1rem;
 }
 
-.Events-in-three {
+.Login-in-three {
     width: 50%;
     margin: auto;
 }
 
-.Events-in-three input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
-}
-
-.Events-in-four {
-    width: 50%;
-    margin: auto;
-}
-
-.Events-in-four input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
-}
-
-.Events-in-five {
-    width: 50%;
-    margin: auto;
-}
-
-
-.Events-in-five button {
+.Login-in-three button {
     width: 100%;
     padding: .8rem;
     border: .1px solid gray;
@@ -102,11 +75,5 @@
     background-color: rgb(16, 19, 24);
     color: rgb(249, 249, 251);
     cursor: pointer;
-    font-size: 1rem;
-}
-
-.Events-in-six a {
-    text-decoration: none;
-    color: rgb(16, 19, 24);
     font-size: 1rem;
 }
