--- a/my-app/src/app/(pages)/sil/page.css
+++ b/my-app/src/app/(pages)/sil/page.css
@@ -18,7 +18,6 @@
     margin: auto;
     padding: 2rem 0rem;
 }
-
 .Sil-one-in {
     width: 100%;
     background-color: black;
@@ -29,8 +28,30 @@
 .Sil-two {
     width: 90%;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
+    /* padding: 0.5rem; */
 }
-
+.sil-two-in{
+    /* border: 2px solid red; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 0.3rem; */
+}
+.Sil-two-search{
+    /* border: 2px solid red; */
+    /* gap: 5px; */
+    width: 19%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.3rem;
+}
+.sil-two-fliter{
+    border: 2px solid red;
+    width: 15%;
+}
 .week-selector {
     display: flex;
     align-items: center;
